--- a/frontend/public/.htaccess
+++ b/frontend/public/.htaccess
@@ -5,6 +5,10 @@
 
     RewriteEngine On
 
+    # Uncomment the following lines to force HTTPS on OpenShift
+    #RewriteCond %{HTTP:X-Forwarded-Proto} !https 
+    #RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
